Fix typos and update image filename in index.html

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
   <!-- Social (OG) -->
   <meta property="og:title" content="QuickPatch Concrete | Decorative & Repair" />
-  <meta property="og:description"
+  <meta property="og: description"
     content="Premium decorative concrete that you won’t believe isn’t natural stone. Heated driveways, garage floors, and repairs—built for Saskatchewan." />
   <meta property="og:type" content="website" />
   <meta property="og:url" content="https://quickpatchconcrete.com/" />
@@ -250,8 +250,8 @@
 
       <h3 class="qp-heading">EASY TO USE!</h3>
       <p>
-        Quick Patch is a thin fluid that can fix extremely fine cracks, or may be mixed with sand to repair large cracks,
-        chips, pops, spalling, pavement divots, missing portions of concrete, and more.
+        Quick Patch is a thin fluid that can fix extremely fine cracks, or may be mixed with sand to repair large cracks.
+        chips, pops, spalling, pavement divots, missing concrete portions, and more.
       </p>
       <ul>
         <li>Mix two Parts Together 1:1</li>
@@ -352,19 +352,19 @@
       <h3>Liquid Rubber Base (LRB)</h3>
       <p>
         LRB is a single-component liquid rubber that cures completely throughout its thickness in under 4 hours,
-        forming a solid flexible rubber compound similar in toughness to a truck tire (approx. Shore A 65,
+        forming a solid, flexible rubber compound similar in toughness to a truck tire (approx. Shore A 65,
         600% elongation). It bonds to itself for seamless work between new and previous applications.
         LRB is used for filling cracks, joints, holes, divots, and damaged concrete areas, and can also be
         mixed with sand for reinforcement.
       </p>
       <p>
-        <strong>Key advantages:</strong> cures fully in under 4 hours, activates with tap water, bonds permanently
+        <strong>Key advantages:</strong> cures fully in under 4 hours, activates with tap water,and  bonds permanently
         to Permaflex, and is ideal for heavy-duty indoor or outdoor waterproofing and repair work.
       </p>
       <br>
       <div class="qp-product-media">
       <!-- Replace with your actual LRB image -->
-      <img src="images/lrb.jpg" alt="Liquid Rubber Base (LRB) product" class="qp-product-img">
+      <img src="images/LRB.jpg" alt="Liquid Rubber Base (LRB) product" class="qp-product-img">
     </div><br>
     </div>
   </article>
